src/test/ui/parser/underscore-suffix-for-string.stderr
error: suffixes on string literals are invalid
  --> $DIR/underscore-suffix-for-string.rs:6:13
   |
LL |     let _ = "Foo"_;
   |             ^^^^^^ invalid suffix `_`

warning: underscore literal suffix is not allowed
  --> $DIR/underscore-suffix-for-string.rs:6:18
   |
LL |     let _ = "Foo"_;
   |                  ^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: see issue #42326 <https://github.com/rust-lang/rust/issues/42326> for more information

error: aborting due to previous error; 1 warning emitted

